--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,8 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Ignore Visual Studio temporary files, build results, and include VS database and temporary files.
+.vs/
+*.vsidx
+
