instale microsoftcore y sql server

--- a/ApiFestivos/Festivos.Infraestructura.Repositorio/Festivos.Infraestructura.Repositorio.csproj
+++ b/ApiFestivos/Festivos.Infraestructura.Repositorio/Festivos.Infraestructura.Repositorio.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ApiFestivos\Festivos.Core\Festivos.Core.csproj" />
+    <ProjectReference Include="..\Festivos.Infraestructura.Persistencia\Festivos.Infraestructura.Persistencia.csproj" />
   </ItemGroup>
 
 </Project>
