Correccion de errores y se despliegue en swagger

--- a/ApiFestivos/Festivos.Presentacion.csproj
+++ b/ApiFestivos/Festivos.Presentacion.csproj
@@ -18,9 +18,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Festivos.Aplicacion\Festivos.Aplicacion.csproj" />
-    <ProjectReference Include="..\Festivos.Core\Festivos.Core.csproj" />
+	<ProjectReference Include="..\Festivos.Core\Festivos.Core.csproj" />
     <ProjectReference Include="..\Festivos.Dominio\Festivos.Dominio.csproj" />
     <ProjectReference Include="..\Festivos.Infraestructura.Persistencia\Festivos.Infraestructura.Persistencia.csproj" />
+	<ProjectReference Include="..\Festivos.Infraestructura.Repositorio\Festivos.Infraestructura.Repositorio.csproj" />
+
   </ItemGroup>
 
 </Project>
