--- a/ApiFestivos/Properties/launchSettings.json
+++ b/ApiFestivos/Properties/launchSettings.json
@@ -23,8 +23,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7281;http://localhost:5179",
+      "launchUrl": "",
+      "applicationUrl": "https://localhost:7281",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
