Actualizaciones de metodos

--- a/ApiFestivos/appsettings.json
+++ b/ApiFestivos/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=NICOLµS\\SQLEXPRESS;Database=Festivos;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=NICOLµS\\SQLEXPRESS;Database=Festivos;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
@@ -9,4 +9,5 @@
     }
   },
   "AllowedHosts": "*"
+
 }
